gccida/g3/ix86_address_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5060:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v3; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5068:4: error: expected ';' after expression
rtx v12; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5068:5: error: use of undeclared identifier 'v12'
rtx v12; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5080:4: error: expected ';' after expression
rtx v24; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5080:5: error: use of undeclared identifier 'v24'
rtx v24; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5163:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5178:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5179:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5184:11: error: expected ';' after expression
x = ( rtx)x[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5191:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5192:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( __int64)rtx[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5202:13: error: expected ';' after expression
rtx = ( rtx)v20.rtwint; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5208:13: error: expected ';' after expression
rtx = ( rtx)v20.rtwint; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5221:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5222:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5230:15: error: expected expression
rtx = *( rtx *)( v22.rtwint + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5282:1: error: use of undeclared identifier 'v12'
v12 = x; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5285:7: error: use of undeclared identifier 'v12'
rtx = v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/i386.c:5288:1: error: use of undeclared identifier 'v24'
v24 = x; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_address_cost/src/obj/i386.o] Error 1
